--- a/.env
+++ b/.env
@@ -19,13 +19,14 @@ SESSION_NAME=sys.session
 MONGODB_URI=mongodb://localhost:27017/test
 
 # PostgreSQL
- DATABASE_URL= postgresql://sa:1/sasql64@k2mpg.ddns.net/dbnap
- PG_CONNECTION_STRING=
- PG_HOST=k2mpg.ddns.net
- PG_PORT=5432
- PG_USER=sa
- PG_PASSWORD=1/sasql64
- PG_DATABASE=dbnap
+#DATABASE_URL= postgresql://sa:1/sasql64@k2mpg.ddns.net/dbnap
+#DATABASE_URL= postgres://sa:1/sasql64@k2mpg.ddns.net:5432/dbnap
+PG_CONNECTION_STRING=
+PG_HOST=k2mpg.ddns.net
+PG_PORT=5432
+PG_USER=sa
+PG_PASSWORD=1/sasql64
+PG_DATABASE=dbnap
 
 # mysql
 MYSQL_CLIENT=mysql
@@ -72,3 +73,4 @@ GOOGLE_CALLBACK_URL=
 
 
 client=postgres
+NODE_ENV=development
