--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ MONGODB_URI=mongodb://localhost:27017/test
 
 # PostgreSQL
 #DATABASE_URL= postgresql://sa:1/sasql64@k2mpg.ddns.net/dbnap
-#DATABASE_URL= postgres://sa:1/sasql64@k2mpg.ddns.net:5432/dbnap
+DATABASE_URL= postgres://sa:1/sasql64@k2mpg.ddns.net:5432/dbnap
 PG_CONNECTION_STRING=
 PG_HOST=k2mpg.ddns.net
 PG_PORT=5432
