--- a/.env
+++ b/.env
@@ -14,19 +14,25 @@ REDIS_PASSWORD=
 # session
 SESSION_SECRET=f38f8adc-ff23-4311-8f82-35cba9b6ac96
 SESSION_NAME=sys.session
-
+DB_HOST=postgres
 # mongodb
 MONGODB_URI=mongodb://localhost:27017/test
-
+DEBUG=knex:* 
 # PostgreSQL
-#DATABASE_URL= postgresql://sa:1/sasql64@k2mpg.ddns.net/dbnap
-DATABASE_URL= postgres://sa:1/sasql64@k2mpg.ddns.net:5432/dbnap
-PG_CONNECTION_STRING=
-PG_HOST=k2mpg.ddns.net
-PG_PORT=5432
-PG_USER=sa
-PG_PASSWORD=1/sasql64
-PG_DATABASE=dbnap
+#DATABASE_URL='postgresql://neondb_owner:npg_SvH26UJypmAh@ep-wild-moon-a8qu9mek-pooler.eastus2.azure.neon.tech/neondb?sslmode=require'
+#PG_HOST=k2mpg.ddns.net
+#PG_PORT=5432
+#PG_USER=sa
+#PG_PASSWORD=1/sasql64
+#PG_DATABASE=dbnap
+
+DATABASE_URL=postgresql://avnadmin:AVNS_Hixl4QGVux30Kz0mZrI@pg-3e37dcf6-punvarat-7a2d.f.aivencloud.com:22067/nabdb
+PG_HOST=pg-3e37dcf6-punvarat-7a2d.f.aivencloud.com
+PG_PORT=22067
+PG_USER=avnadmin
+PG_PASSWORD=AVNS_Hixl4QGVux30Kz0mZrI
+PG_DATABASE=nabdb
+
 
 # mysql
 MYSQL_CLIENT=mysql
