--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.21.2",
     "express-auto-routes": "^2.2.0",
     "express-rate-limit": "^7.5.0",
+    "fs": "^0.0.1-security",
     "helmet": "^8.0.0",
     "knex": "^3.1.0",
     "morgan": "^1.10.0",
@@ -16,8 +17,13 @@
     "redis": "^4.7.0",
     "router": "^1.3.8",
     "sqlite3": "^5.1.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "url": "^0.11.4"
   },
+ "scripts":{ 
+   "start": "node ./bin/www", 
+   "start-dev": "nodemon ./server.js"
+ },
   "devDependencies": {
     "nodemon": "^3.1.9"
   }
